<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.andrea.hikerswatch.MainActivity"
    android:focusableInTouchMode="false"
    android:background="@drawable/mountain">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hiker_apos_s_watch"
        android:id="@+id/hikersWatch"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="50sp"
        style="?android:attr/textAppearanceLarge"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:columnCount="2"
        android:rowCount="5"
        android:id="@+id/gridLayout"
        android:useDefaultMargins="true"
        android:background="#51396b38">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:id="@+id/latitudeText"
            android:layout_row="0"
            android:layout_column="0"
            android:gravity="fill"
            android:textSize="@dimen/text_size"
            style="?android:attr/textAppearanceMedium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/latitudeNumber"
            android:text="@string/defaultNum"
            android:layout_row="0"
            android:layout_column="1"
            android:gravity="fill"
            android:textSize="@dimen/text_size"
            style="?android:attr/textAppearanceMedium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:id="@+id/longitudeText"
            android:layout_row="1"
            android:layout_column="0"
            android:gravity="fill"
            android:textSize="@dimen/text_size"
            style="?android:attr/textAppearanceMedium"
            android:layout_marginEnd="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/longitudeNumber"
            android:text="@string/defaultNum"
            android:layout_row="1"
            android:layout_column="1"
            android:gravity="fill"
            android:textSize="@dimen/text_size"
            style="?android:attr/textAppearanceMedium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accuracy"
            android:id="@+id/accuracyText"
            android:layout_row="2"
            android:layout_column="0"
            android:gravity="fill"
            android:textSize="@dimen/text_size"
            style="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/accuracyNumber"
            android:text="@string/defaultDistance"
            android:layout_row="2"
            android:layout_column="1"
            android:gravity="fill"
            android:textSize="@dimen/text_size"
            style="?android:attr/textAppearanceMedium"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            android:id="@+id/speedText"
            android:layout_row="3"
            android:layout_column="0"
            android:gravity="fill"
            android:textSize="@dimen/text_size"
            style="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/speedNumber"
            android:text="@string/defaultSpeed"
            android:layout_row="3"
            android:layout_column="1"
            android:gravity="fill"
            android:textSize="@dimen/text_size"
            style="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bearing"
            android:id="@+id/bearingText"
            android:layout_row="4"
            android:layout_column="0"
            android:gravity="fill"
            android:textSize="@dimen/text_size"
            style="?android:attr/textAppearanceMedium" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bearingNumber"
            android:text="@string/defaultNum"
            android:layout_row="4"
            android:layout_column="1"
            android:gravity="fill"
            android:textSize="@dimen/text_size"
            style="?android:attr/textAppearanceMedium" />

    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Address:"
        android:id="@+id/address"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
